Add text buffer size configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,5 +16,8 @@ bind -n M-Down select-pane -D
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+# Increase tmux buffer size
+set-option -g history-limit 3000
+
 #ctrl key support to enable jumping words
 set-window-option -g xterm-keys on
